<resources>
    <string name="app_name">HobbyTrophies PSN</string>
    <string name="main_banner_ad_unit_id">ca-app-pub-8211299087542513/1176201187</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_game_datail">GameDatailActivity</string>

    <string name="title_header_trophy_dlc">DLC: %s</string>


    <!-- ANIMATIONS -->
    <string name="transition_image_trophy">ImageTrophy</string>
    <string name="transition_title_trophy">transitionTitleTrophy</string>
    <string name="transition_image_game">ImageGame</string>

    <string name="title_activity_trophy_detaill">TrophyDetaillActivity</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hint_validate_code">Ingrese el siguiente código en el campo ABOUT ME de su perfil.</string>
    <string name="title_validate_code">Usuario: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_game_detail_profile">GameDetailProfileActivity</string>
    <string name="title_activity_meeting_list">MeetingListActivity</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="january">January</string>
    <string name="febrary">Martes</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="augost">Augost</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="date_time_meeting">%2$s, %5$s %1$d - %3$d:%4$d</string>

    <string name="boosting">Boosting</string>
    <string name="competitive">Competitive</string>
    <string name="just_for_fun">Just for fan</string>
    <string name="cooperative">Cooperative</string>
    <string name="share_play">Share and play</string>
    <string name="title_activity_meeting_detail">MeetingDetailActivity</string>
    <string name="action_edit">Editar</string>
    <string name="action_join">Unirse</string>
    <string name="action_exit">Salir</string>

    <string name="edit_meeting_text">Datos generales</string>
    <string name="edit_meeting_trophies_text">Trofeos de la quedada</string>
    <string name="delet_meeting_text">Eliminar quedada</string>
    <string name="edit_meeting_dialog_title">¿Qué desea editar?</string>
    <string name="user_name_in_meeting">%1$s (%2$d/%3$d)</string>
    <string name="filter_meeting_dialog_title">¿Cuáles quieres ver?</string>
    <string name="filter_all_meetings">Todas las quedadas</string>
    <string name="filter_my_games_meetings">Sólo las de mis juegos</string>
    <string name="filter_my_meetings">Sólo las que yo cree</string>
    <string name="coments_count_text">Comentarios %d</string>
    <string name="notification_meeting_is_coming_title">¡Prepárate para %s!</string>
    <string name="notification_meeting_is_coming_txt">La quedada comienza a las %s</string>
    <string name="count_down_meeting">%1$dd - %2$d:%3$02d %4$02d</string>


    <string name="item_type_game">Juego</string>
    <string name="item_type_console">Console</string>
    <string name="item_type_accessories">Accessories</string>
    <string name="item_type_others">Others</string>
    <string name="apply">Aplicar</string>
    <string name="any_price_txt">Cualquier precio</string>
    <string name="range_price">%1$d € - %2$d €</string>
    <string name="how_much_want_pay_txt">¿Cuánto quieres pagar?</string>
    <string name="extra_condition_txt">¿Alguna condición extra?</string>
    <string name="barter_txt">Trueque</string>
    <string name="digital_txt">Digital</string>
    <string name="witch_category">Elige la categoría</string>
    <string name="order_by_txt">Ordernar por</string>
    <string name="item_type_any">Cualquier tipo</string>
    <string name="order_by_date">Most recently published</string>
    <string name="order_by_price_down">De precios altos a bajos</string>
    <string name="order_by_price_up">De precios bajos a altos</string>
    <string name="delete_text">Eliminar</string>
    <string name="mark_as_sold">Marcar como vendido</string>
    <string name="mark_as_not_sold">Desmarcar como vendido</string>

    <string name="select_console">Seleccione Consola</string>

    <string name="console_ps">PS</string>
    <string name="console_psp">PSP</string>
    <string name="console_ps2">PS2</string>
    <string name="console_ps3">PS3</string>
    <string name="console_vita">VITA</string>
    <string name="console_ps4">PS4</string>

    <string name="action_add_favourite">Favorito</string>
    <string name="share_txt">Compartir</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
