<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.marbit.hobbytrophies.MeetingDetailActivity">


    <item
        android:id="@+id/action_edit_meeting"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_join_meeting"
        android:title="@string/action_join"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_exit_meeting"
        android:title="@string/action_exit"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_share_meeting"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="always"
        android:title="Compartir" />

</menu>
