<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    xmlns:rsb="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="36dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete"
                android:hint="¿Qué estás buscando?"
                android:layout_marginBottom="8dp"/>

            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/witch_category"
                android:textSize="16sp"
                app:customFont="BrandonText-Regular.otf"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_white"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:spinnerMode="dialog"/>

            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_much_want_pay_txt"
                android:textSize="16sp"
                app:customFont="BrandonText-Regular.otf"/>

            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:id="@+id/text_view_range_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/material_white"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/any_price_txt"
                app:customFont="BrandonText-Bold.otf"/>


            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/seekbar_range_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                rsb:absoluteMaxValue="1000"
                rsb:absoluteMinValue="0"/>


            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¿A qué distancia?"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                app:customFont="BrandonText-Regular.otf"/>

            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:id="@+id/text_view_range_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/material_white"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Cualquier distancia"
                app:customFont="BrandonText-Bold.otf"/>


            <SeekBar
                android:id="@+id/seekbar_range_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="50"
                />


            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extra_condition_txt"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:customFont="BrandonText-Regular.otf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <CheckBox
                        android:id="@+id/checkbox_barter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@color/material_white"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/barter_txt"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <CheckBox
                        android:id="@+id/checkbox_digital"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textColor="@color/material_white"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/digital_txt"/>
                </FrameLayout>


            </LinearLayout>

            <com.marbit.hobbytrophies.overwrite.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_by_txt"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                app:customFont="BrandonText-Regular.otf"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_order_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/material_white"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:spinnerMode="dialog"/>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/button_apply_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"/>

    </LinearLayout>

</RelativeLayout>