<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    tools:context="com.marbit.hobbytrophies.wishes.NewWishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <info.hoang8f.android.segmented.SegmentedGroup
            android:id="@+id/radio_button_type_item"
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            segmentedgroup:sc_border_width="1dp"
            segmentedgroup:sc_corner_radius="6dp">

            <RadioButton
                android:id="@+id/radio_button_game"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="Juego"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/radio_button_console"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Consola"
                style="@style/RadioButton" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <TextView
            android:id="@+id/button_select_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="Seleccione Juego"/>

        <Spinner
            android:id="@+id/button_select_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="4dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:background="?android:attr/selectableItemBackground"
            android:text="Seleccione consola"/>

        <TextView
            android:id="@+id/text_view_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAllCaps="true"
            android:text="Cualquier precio"/>

        <org.florescu.android.rangeseekbar.RangeSeekBar
            android:id="@+id/seekbar_range_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            rsb:absoluteMaxValue="1000"
            rsb:absoluteMinValue="0"/>

        <CheckBox
            android:id="@+id/checkbox_barter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/barter_txt"/>

        <CheckBox
            android:id="@+id/checkbox_digital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/digital_txt"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/button_apply_add_wish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Agregar"/>

    </LinearLayout>

</RelativeLayout>
